# free_api

./: .gitignore  README.md  ai_models.html  generate_ai_models_excel.py  index.html  package-lock.json  package.json  test_const
src-tauri/: Cargo.toml  chapter1.txt  chapter2.txt  random_data.xlsx  tauri.conf.json  太原火灾信息.csv  小说.txt
src-tauri/.rpa_profile/: ChromeFeatureState  Local State  SingletonCookie  SingletonLock  SingletonSocket
src-tauri/.rpa_profile/Default/: BrowsingTopicsState  Cookies  DIPS  DIPS-wal  Favicons  History  History-journal  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
src-tauri/.rpa_profile/Default/DawnGraphiteCache/: data_1  index
src-tauri/.rpa_profile/Default/DawnWebGPUCache/: data_1  index
src-tauri/.rpa_profile/Default/Extension Rules/: LOG
src-tauri/.rpa_profile/Default/Extension Scripts/: LOG
src-tauri/.rpa_profile/Default/Extension State/: LOG  LOG.old
src-tauri/.rpa_profile/GrShaderCache/: data_1  index
src-tauri/.rpa_profile/GraphiteDawnCache/: data_1  index
src-tauri/.rpa_profile/ShaderCache/: data_1  index
src-tauri/.rpa_profile/segmentation_platform/: ukm_db
src-tauri/capabilities/: default.json
src-tauri/prompts/: agent_system_prompt.md  core_logic.md  rescue.md  vision_cot.md
src-tauri/prompts/tools/: ask_human.md  browser_dom.md
src-tauri/src/: agent.rs  commands.rs  db.rs  lib.rs  llm.rs
src-tauri/src/agent/: browser.rs  builtins.rs  context.rs  mcp.rs  mod.rs  router.rs  types.rs  utils.rs
src-tauri/工作文档/: readme.txt
(+190 files in other folders)
